Uploading project: Header toggle made with JS mobile dropdown menu

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ===Css FILE === -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"-->
     <title>Personal Portafolio Karla Vallejo</title>
 </head>
 
@@ -55,7 +56,7 @@
         <section id="home">
             <div class="home-row">
                 <h1> Olá, aqui é <br>Karla Vallejo<span>.</span></h1>
-                <p>Eu Sou <span class="auto-input">Fronte-End Developer</span></p>
+                <p>Eu <span class="auto-input"></span></p>
 
             </div>
         </section>
@@ -66,7 +67,7 @@
         <section id="about">
             <h1 class="sub-heading">About Me</h1>
             <div class="divider"></div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
 
 
             <div class="about-col">
@@ -79,7 +80,7 @@
                 <!-- information -->
                 <div class="info-col">
                     <h2>Front-End Developer!</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel maxime recusandae ex molestias voluptatum?</p>
+                    <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit nemo delectus cupiditate consequuntur natus voluptatem vitae ipsam.</p>
                     <div class="icon-list-col">
 
                         <!-- Left- Side list -->
@@ -111,6 +112,18 @@
 
         <!--======About Section END ===== -->
 
+
+        <!-------------------------------------------------------------------------------->
+
+        <!-------================= Facts Section START=======================-->
+        <!-------================= Facts Section END=======================-->
+        <section id="fact">
+            <h1 class="sub-heading">Facts</h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
+            </div>
+
+        </section>
     </main>
 
 
@@ -118,7 +131,7 @@
     <!--Typed.js File (For Typing Effect)-->
     <script src="https://cdn.jsdelivr.net/typed.js@2.0.12"></script>
     <!--Main Js File -->
-    <script src="app.js"></script>
+    <script src="script.js/script.js"></script>
     <!-- FontAwesom Js File (Icon File)-->
     <script src="https://kit.fontawesome.com/aa5f332820.js" crossorigin="anonymous"></script>
 </body>
