Uploading project: notification message working on my portfolio project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- ===Css FILE === -->
     <link rel="stylesheet" href="css/style.css">
-    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"-->
     <title>Personal Portafolio Karla Vallejo</title>
 </head>
 
@@ -56,7 +55,7 @@
         <section id="home">
             <div class="home-row">
                 <h1> Olá, aqui é <br>Karla Vallejo<span>.</span></h1>
-                <p>Eu <span class="auto-input"></span></p>
+                <p>Eu Sou <span class="auto-input">Front-End Developer</span></p>
 
             </div>
         </section>
@@ -112,7 +111,11 @@
 
         <!--======About Section END ===== -->
 
-
+        <div>
+            <h2 style="font-size: 40px; text-align: center; color: red; background-color: aqua; width: 100%; height: 100px;">
+                trabalhando no meu projeto de portafólho
+            </h2>
+        </div>
         <!-------------------------------------------------------------------------------->
 
         <!-------================= Facts Section START=======================-->
@@ -121,15 +124,50 @@
             <h1 class="sub-heading">Facts</h1>
             <div class="divider"></div>
             <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
+
+            <div class="fact-row">
+
+                <!-- Fact Box-1 -->
+                <div class="fact-box">
+                    <i class="fa-regular fa-face-smile"></i>
+                    <strong>50+</strong>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <!-- Fact Box-2 -->
+                <div class="fact-box">
+                    <i class="fa-regular fa-file-code"></i>
+                    <strong>60+</strong>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <!-- Fact Box-3 -->
+                <div class="fact-box">
+                    <i class="fa-solid fa-headset"></i>
+                    <strong>24</strong>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <!-- Fact Box-4 -->
+                <div class="fact-box">
+                    <i class="fa-solid fa-clock-rotate-left"></i>
+                    <strong>10+</strong>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+
+            </div>
+
             </div>
 
         </section>
+        <div>
+            <h2 style="font-size: 40px; text-align: center; color: red; background-color: aqua; width: 100%; height: 100px;">
+                trabalhando no meu projeto de portafólho
+            </h2>
+        </div>
     </main>
 
 
 
     <!--Typed.js File (For Typing Effect)-->
-    <script src="https://cdn.jsdelivr.net/typed.js@2.0.12"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <!--Main Js File -->
     <script src="script.js/script.js"></script>
     <!-- FontAwesom Js File (Icon File)-->
