Uploading project: second part of completing my portfolio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p><b>Karla Vallejo</b>&copy; Copyriht 2023</p>
+            <p>Karla Vallejo<b>&copy;Copyriht 2023</p>
         </div>
 
     </header>
@@ -54,8 +54,8 @@
         <!-- === Home Section Start ===== -->
         <section id="home">
             <div class="home-row">
-                <h1> Olá, aqui é <br>Karla Vallejo<span>.</span></h1>
-                <p>Eu Sou <span class="auto-input">Front-End Developer</span></p>
+                <h1> Olá, aqui é<br>Karla Vallejo<span>.</span></h1>
+                <p>Eu<br><span class="auto-input"></span></p>
 
             </div>
         </section>
@@ -66,7 +66,9 @@
         <section id="about">
             <h1 class="sub-heading">About Me</h1>
             <div class="divider"></div>
-            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi
+                accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia
+                minus soluta non, in eum alias harum?</p>
 
 
             <div class="about-col">
@@ -79,16 +81,19 @@
                 <!-- information -->
                 <div class="info-col">
                     <h2>Front-End Developer!</h2>
-                    <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit nemo delectus cupiditate consequuntur natus voluptatem vitae ipsam.</p>
+                    <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas suscipit nemo
+                        delectus cupiditate consequuntur natus voluptatem vitae ipsam.</p>
                     <div class="icon-list-col">
-
                         <!-- Left- Side list -->
                         <div class="icon-list">
                             <ul>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Birthday:</strong> <span>31 Jan 1985</span></li>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Website:</strong> <span>www.</span></li>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Phone:</strong> <span>+55 11 983112705</span></li>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>City:</strong> <span>São Paulo, São Paulo, Brasil</span></li>
+                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Birthday:</strong> <span>31
+                                        Jan 1985</span></li>
+                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Website:</strong>
+                                    <span>www.</span>
+                                </li>
+                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>City:</strong> <span>São
+                                        Paulo, São Paulo, Brasil</span></li>
                             </ul>
                         </div>
 
@@ -96,9 +101,12 @@
                         <!--  Right-Side list -->
                         <div class="icon-list">
                             <ul>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Age:</strong> <span>38</span></li>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Degree:</strong> <span>Starter</span></li>
-                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Email:</strong> <span>karlap17933@gmail.com</span></li>
+                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Degree:</strong>
+                                    <span>Starter</span>
+                                </li>
+                                <li><i class="fa-solid fa-angle-double-right"></i> <strong>Email:</strong>
+                                    <span>karlap17933@gmail.com</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -111,19 +119,16 @@
 
         <!--======About Section END ===== -->
 
-        <div>
-            <h2 style="font-size: 40px; text-align: center; color: red; background-color: aqua; width: 100%; height: 100px;">
-                trabalhando no meu projeto de portafólho
-            </h2>
-        </div>
         <!-------------------------------------------------------------------------------->
 
         <!-------================= Facts Section START=======================-->
-        <!-------================= Facts Section END=======================-->
+
         <section id="fact">
             <h1 class="sub-heading">Facts</h1>
             <div class="divider"></div>
-            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia minus soluta non, in eum alias harum?</p>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi
+                accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia
+                minus soluta non, in eum alias harum?</p>
 
             <div class="fact-row">
 
@@ -154,14 +159,243 @@
 
             </div>
 
+
+        </section>
+        <!-------================= Facts Section END=======================-->
+        <!------------------------------------------------------------------------------------------->
+        <!-- ==============SKILLS SECTION Stat =================-->
+        <SEction id="skill">
+            <h1 class="sub-heading">Skills</h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi
+                accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia
+                minus soluta non, in eum alias harum?</p>
+
+            <div class="skill-row">
+                <!------  skills-1----->
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>HTML</h2>
+                        <H2>0%</H2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+                <!------  skills-2----->
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>CSS</h2>
+                        <H2>0%</H2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+                <!------  skills-3----->
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>JAVASCRIPT</h2>
+                        <H2>0%</H2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+                <!------  skills-4----->
+                <div class="skill-box">
+                    <div class="skill-info">
+                        <h2>POWE BI</h2>
+                        <H2>0%</H2>
+                    </div>
+                    <div class="skill-outter-line">
+                        <div class="skill-inner-line"></div>
+                    </div>
+                </div>
+
+            </div>
+        </SEction>
+        <!-- ==============SKILLS SECTION END =================-->
+
+        <!-------------------------------------------------------------------------------------------->
+
+        <!------========== Resume Section START============------->
+
+        <section id="resume">
+            <h1 class="sub-heading">Resume</h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate fugiat quasi
+                accusantium explicabo numquam itaque saepe perferendis. Earum, doloremque. Deleniti nobis error officia
+                minus soluta non, in eum alias harum?</p>
+
+            <div class="resume-row">
+
+                <!---  Left Col --->
+                <div class="resume-cols">
+                    <h2>sumary</h2>
+                    <div class="my-info">
+                        <h3> Karla Vallejo</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus modi atque facilis voluptas
+                            necessitatibus dignissimos.</p>
+                        <ul>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>(XXX) 000-000</li>
+                            <li>karlap17933@gmail.com</li>
+                        </ul>
+                    </div>
+
+                    <h2>Educacion</h2>
+                    <div class="my-edu">
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        <span class="sp-box">xxx-xxx</span>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus quaerat odit
+                            excepturi est impedit. Necessitatibus, iusto? Deleniti accusantium quos ad!</p>
+
+                    </div>
+
+                </div>
+
+                <!--- Right  Col ---->
+                <div class="resume-cols">
+                    <h2>Profection Experiencia</h2>
+                    <div class="pro-exp">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <span class="sp-box">xxx-xxx</span>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <ul>
+                            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque corrupti, eum beatae
+                                amet sed nostrum nulla consequatur sequi.</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil illo temporibus aliquam
+                                dignissimos nemo dolores error doloremque repudiandae.</li>
+                            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi consequuntur sint
+                                incidunt. Quibusdam aliquid tempora ab autem molestiae.</li>
+                        </ul><br>
+                    </div>
+
+                    <div class="pro-exp">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <span class="sp-box">xxx-xxx</span>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <ul>
+                            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque corrupti, eum beatae
+                                amet sed nostrum nulla consequatur sequi.</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil illo temporibus aliquam
+                                dignissimos nemo dolores error doloremque repudiandae.</li>
+                            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi consequuntur sint
+                                incidunt. Quibusdam aliquid tempora ab autem molestiae.</li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!------========== Resume Section END============------->
+        <!---------------------------------------------------------------------------------------------------->
+
+
+        <!---======= Portfolio Section START ============-->
+        <section id="portfolio">
+            <h1 class="sub-heading">Portfolio </h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla expedita laboriosam iure
+                magnam, earum provident tenetur aliquam aspernatur necessitatibus ea tempora, voluptas cupiditate est
+                mollitia minima suscipit? Sint, est obcaecati!</p>
+
+            <div class="port-row">
+                <!----portfolio item-1----->
+
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/infinito.jpg" alt="....">
+                    </div>
+
+                    <div class="port-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloribus.</p>
+                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <!----portfolio item-2----->
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/infinito.jpg" alt="....">
+                    </div>
+
+                    <div class="port-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloribus.</p>
+                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <!----portfolio item-3----->
+                <div class="port-item">
+                    <div class="port-img">
+                        <img src="img/infinito.jpg" alt="....">
+                    </div>
+
+                    <div class="port-info">
+                        <h4>Lorem, ipsum dolor.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, doloribus.</p>
+                        <a href="#"> <i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!---======= Portfolio Section END ============-->
+        <!---------------------------------------------------------------------------------------->
+        <div class="tbj">Trabalhando ainda meu portafolhio</div>
+        <!------ == Contact Section START ===========-->
+        <section>
+            <h1 class="sub-heading">Contact</h1>
+            <div class="divider"></div>
+            <p class="sub-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi commodi nulla quisquam itaque. Autem ducimus illo ad nisi quisquam debitis?!</p>
+
+            <div class="contact-row">
+                <!-- Lefr Col -->
+                <div class="contact-left">
+                    <!-- Email Box -->
+                    <div class="icon-box">
+                        <i class="fa-solid fa-envelope"></i></div>
+                        <div class="info">
+                            <h4>Email:</h4>
+                            <p>karlap@gmil.com</p>
+                        </div>
+                </div>
+
+                <!-- Call Box -->
+                <div class="icon-box">
+                    <i class="fa-solid fa-phone"></i></div>
+                    <div class="info">
+                        <h4>Call:</h4>
+                        <p>+55(11) 9xxx-xxxx05</p>
+                    </div>
+            </div>
+
+                <!-- Location Box -->
+            <div class="icon-box">
+                <i class="fa-solid fa-envelope"></i></div>
+                <div class="info">
+                    <h4>Location:</h4>
+                    <p>Sp Brasil</p>
+                </div>
+        </div>
+<!------------------------------------------------------------>
+<div class="tbj">Trabalhando ainda meu portafolhio</div>
+<!------------------------------------------------------------->
+                <!--Right Col  -->
+                <div class="contact-right"></div>
             </div>
 
         </section>
-        <div>
-            <h2 style="font-size: 40px; text-align: center; color: red; background-color: aqua; width: 100%; height: 100px;">
-                trabalhando no meu projeto de portafólho
-            </h2>
-        </div>
+        <!----========== Contact Section END ===========-->
+
+
+
+
+
+
     </main>
 
 
